<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alata"
        android:text="@string/mainactivity_HomeHeadingTextDoctor"
        android:textColor="#000000"
        android:textSize="96sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/alata"
        android:text="@string/mainactivity_HomeHeadingTextAdmin"
        android:textColor="#000000"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/mainActivityLoginBTN"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="30dp"
            android:backgroundTint="@color/AppSecondaryColorX"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/mainactivity_HomeLoginBTN"
            android:textSize="34sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/mainActivityRegisterBTN"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="30dp"
            android:backgroundTint="@color/AppSecondaryColorX"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/mainactivity_HomeRegisterBTN"
            android:textSize="34sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>