<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/alata"
            android:text="@string/mainactivity_HomeHeadingTextDoctor"
            android:textColor="@color/AppFourthColorX"
            android:textSize="96sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/alata"
                android:text="@string/mainactivity_HomeHeadingTextAdmin"
                android:textColor="@color/AppFourthColorX"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/mainactivity_HomeLoginBTN"
                android:textColor="@color/AppPrimaryColorX"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="431dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/adminLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/LoginEmail"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/AppFourthColorX" />

        <EditText
            android:id="@+id/adminLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/LoginPassword"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/AppFourthColorX" />

        <Button
            android:id="@+id/adminLoginBTN"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/AppSecondaryColorX"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/LoginActivity_LoginBTN"
            android:textSize="40sp"
            tools:ignore="TextSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

</LinearLayout>